add technology section

--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,58 @@
          </div>
       </div>
    </section>
-   <section class="technology-section"></section>
+   <section class="technology-section">
+      <ul>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            .NET Languages (C#, VB.NET)
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            HTML5
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            CSS(3)/SCSS
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            Javascript (ECS6)
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            TypeScript
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            OpenApi/Swagger
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            GraphQL
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            SQL
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            xUnit
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            Object Oriented Programming
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            Functionnal Programming
+         </li>
+         <li>
+            <i class="fa-solid fa-circle-check"></i>
+            Design Patterns
+         </li>
+      </ul>
+   </section>
    <section class="testimonial-section">
       <ul>
          <li>
