mobile-first style

--- a/www/index.html
+++ b/www/index.html
@@ -22,7 +22,7 @@
                <h2>Curriculum Vitae</h2>
                <hr></hr>
                <h1>Geofrey van Hecke</h2>
-               <div id="summary">
+               <div class="summary">
                   <p><b>Passionate</b>, <b>enthusiastic</b> and <b>experienced</b> computer engineer.</p>
                   <p>Very <b>rigorous</b> in terms of <b>quality</b> and <b>performance</b>, he creates applications that respect the state of the art in the industry.</p>
                   <p><span id="experience"></span> years of experience with a proven background in .NET, Javascript, HTML and CSS.</p>
@@ -35,7 +35,7 @@
       <ul>
          <li>
             <i class="fa-solid fa-circle-check"></i>
-            .NET Languages (C#, VB.NET)
+            C# .NET
          </li>
          <li>
             <i class="fa-solid fa-circle-check"></i>
@@ -68,18 +68,6 @@
          <li>
             <i class="fa-solid fa-circle-check"></i>
             xUnit
-         </li>
-         <li>
-            <i class="fa-solid fa-circle-check"></i>
-            Object Oriented Programming
-         </li>
-         <li>
-            <i class="fa-solid fa-circle-check"></i>
-            Functionnal Programming
-         </li>
-         <li>
-            <i class="fa-solid fa-circle-check"></i>
-            Design Patterns
          </li>
       </ul>
    </section>
